--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,3 +5,9 @@ Jekyll Assets: start scss files with two lines of triple dashes
 @charset "utf-8";
 
 @import "black_n_green";
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
